<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Urban\nAlphabets</string>
    <string name="string_name">Name:</string>
    <string name="string_hint_name">(name)</string>
    <string name="string_language">Language:</string>
    <string name="string_crop_photo">Crop Photo</string>
    <string name="string_add_new_alphabet">Add New Alphabet</string>
    <string name="string_assign_letter">Assign Letter</string>
    <string name="string_view_letter">View Letter</string>
    <string name="string_change">(change)</string>
    <string name="string_reset_alphabet">Reset Alphabet</string>
    <string name="string_delete_alphabet">Delete Alphabet</string>
    <string name="string_write_postcard">Write Postcard</string>
    <string name="string_description">image_description</string>
    <string name="string_take_photo">Take Photo</string>
    <string name="string_alphabet_info">Alphabet Info</string>
    <string name="string_my_alphabets">My Alphabets</string>
    <string name="string_add_alphabet">Add Alphabet</string>
    <string name="string_change_language">Change Language</string>
    <string name="string_share_alphabet">Share Alphabet</string>
    <string name="string_save_alphabet">Save Alphabet</string>
    <string name="string_share_postcard">Share Postcard</string>
    <string name="string_save_postcard">Save Postcard</string>
    <string name="string_start">Start</string>
    <string name="string_welcome">Welcome</string>
    <string name="string_save_letter">Save Letter</string>
    <string name="string_share_letter">Share Letter</string>
    <string name="welcome_message">Urban Alphabets lets you capture photos of letters in your environment and reuse them to write your own messages. Urban Alphabets will also use the device’s internet connection to send your photo letters to the Urban Alphabets website. You can see all images at: www.ualphabets.com It will be used when saving your photos online. Please report problems to mail@susemiessner.org</string>
    <string name="string_clockwise">CW</string>
    <string name="string_anticlockwise">ACW</string>
    <string name="string_splash">Splash</string>
    <string name="string_copyright">\u00A9 Suse Miessner 2014</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_username">Username:</string>
    <string name="string_settings">Settings</string>
    <string name="default_language">Default\nLanguage:</string>
    <string name="location">Enable location</string>
    <string name="username">Username:</string>
    <string name="username_message">Please enter a username:</string>
    <string name="cancel">Cancel</string>
    <string name="enter_username">Enter username</string>
    <string name="ok">OK</string>
    <string name="change">(change)</string>
    <string name="alphabet_info">Alphabet info</string>
    <string name="share_alphabet">Share alphabet</string>
    <string name="share_postcard">Share postcard</string>
    <string name="save_postcard">Save postcard</string>
    <string name="write_postcard">Write postcard</string>
    <string name="save_alphabet">Save alphabet</string>
    <string name="share_postcard">Share postcard</string>
    <string name="my_alphabets">My alphabets</string>
    <string name="settings">Settings</string>
    <string name="save_on_device">Save on this device</string>
    <string name="change_default_language">Change Default Language</string>
</resources>
