<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.susemiessner.urbanalphabets.MainActivity" >
    
    <item 
        android:id="@+id/item_alphabet_info"
        android:title="@string/string_alphabet_info" />

    <item
        android:id="@+id/item_share_alphabet"
        android:title="@string/string_share_alphabet" />

    <item 
        android:id="@+id/item_save_alphabet"
        android:title="@string/string_save_alphabet" />
   
    <item 
        android:id="@+id/item_write_postcard"
        android:title="@string/string_write_postcard" />
    
    <item
        android:id="@+id/item_my_alphabets"
        android:title="@string/string_my_alphabets" />
    
    <item 
        android:id="@+id/item_settings"
        android:title="@string/string_settings" />
        
</menu>
