<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:onClick="onClick" >

    <TextView
        android:id="@+id/textview_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Grey" />

    <TextView
        android:id="@+id/textview_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textview_username_label"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@id/textview_username_label"
        android:clickable="true"
        android:onClick="onClickChangeUsername"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Black" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignBaseline="@id/textview_username_label"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/textview_username_label"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/Black"
        android:visibility="gone" >

    </EditText>

    <TextView
        android:id="@+id/textview_change_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_username_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="onClickChangeUsername"
        android:text="@string/change"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Grey" />

    <TextView
        android:id="@+id/textview_default_language_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_change_username"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
        android:text="@string/default_language"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Grey" />

    <TextView
        android:id="@+id/textview_default_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textview_default_language_label"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@id/textview_default_language_label"
        android:clickable="true"
        android:onClick="onClickChangeDefaultLanguage"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Black" />

    <TextView
        android:id="@+id/textview_change_default_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_default_language_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="onClickChangeDefaultLanguage"
        android:text="@string/change"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Grey" />

    <CheckBox
        android:id="@+id/checkbox_save_on_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textview_change_default_language"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickSave"
        android:text="@string/save_on_device"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Grey" />

    <CheckBox
        android:id="@+id/checkbox_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkbox_save_on_device"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickEnableLocation"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Grey" />

    <ImageButton
        android:id="@+id/imagebutton_settings_ok"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ok_big"
        android:contentDescription="@string/string_description"
        android:onClick="onClickOk" />

</RelativeLayout>